[gd_scene load_steps=2 format=3 uid="uid://mainmenu001"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "BURN ROYALE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="HostButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 40)
text = "Host Game"

[node name="Separator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="AddressLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Server Address:"

[node name="AddressInput" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 0)
text = "127.0.0.1"
placeholder_text = "127.0.0.1"

[node name="JoinButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 40)
text = "Join Game"

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 40)
text = "Quit"

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/HostButton" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/JoinButton" to="." method="_on_join_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
